--- a/app/views/home/coming_soon.html.slim
+++ b/app/views/home/coming_soon.html.slim
@@ -5,25 +5,25 @@
 canvas#dotty
 .global-overlay
 section#home.parallax-div
-  img.brand-logo.text-intro.opacity-0[src="img/logo.png" alt=""]
+  // img.brand-logo.text-intro.opacity-0[src="img/logo.png" alt=""]
   .content
     h1.text-intro.opacity-0
       | Hey Guys!
       br
       | We're Coming Soon...
     p.text-intro.opacity-0
-      | BUMP is all about MinimalFlat. Focused on the content and captivating your vision!
+      | B&B IT Services is all about focusing towards customer needs and giving best IT services in market. Achieve your Vision & Ideas with us!
       br
       strong
-        | Fully responsive, ready-to-use, support 24/7.
+        | 24/7 Support.
     nav
       ul
         li
           a.light-btn.text-intro.opacity-0[href="#info-part"]
             | Scroll or Click Me
-        li
-          a.action-btn.trigger.text-intro.opacity-0[href="#newsletter"]
-            | Be Notified!
+        / li
+        /   a.action-btn.trigger.text-intro.opacity-0[href="#newsletter"]
+        /     | Be Notified!
 section#info-part
   .content
     .row
@@ -32,10 +32,10 @@ section#info-part
           span.icon.icon-clock
             i.icon.ion-ios-clock-outline
           h3
-            | Grand opening in : 
+            | Services starting in : 
             #getting-started
           p.mb-mobile-30
-            | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.
+            | B&B provides services for both web & mobile applications. B&B covers domains like Healthcare, E-Commerce & Business Automation. We are expert in technologies like Ruby on Rails(ROR), Django (Python), Laravel, CakePHP, Shopify Apps and MEAN & MERN Stacks
       .col-xs-12.col-sm-6.col-lg-6.box-info
         .box-info-dark.equalizer
           span.icon
@@ -43,119 +43,117 @@ section#info-part
           h3.text-uppercase.color-grey
             | Bring your ideas to life
           p.mb-mobile-30
-            | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.
-  .content
-    .photo-line
-      .my-gallery.row[itemscope itemtype="http://schema.org/ImageGallery"]
-        figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
-          a.box-picture[href="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280"]
-            img.img-responsive[src="img/gallery-1.jpg" itemprop="thumbnail" alt="This is my work"]
-            p
-              | Open
-          figcaption[itemprop="caption description"]
-            .photo-details
-              h4
-                | Merveilles cachées
-              h5
-                | France
-              p
-                | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
-        figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
-          a.box-picture[href="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280"]
-            img.img-responsive[src="img/gallery-2.jpg" itemprop="thumbnail" alt="This is my work"]
-            p
-              | Voir
-          figcaption[itemprop="caption description"]
-            .photo-details
-              h4
-                | Freund des Berges
-              h5
-                | Deutschland
-              p
-                | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
-        figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
-          a.box-picture[href="img/gallery-3.jpg" itemprop="contentUrl" data-size="1920x1280"]
-            img.img-responsive[src="img/gallery-3.jpg" itemprop="thumbnail" alt="This is my work"]
-            span.widget-angle-bottom-left
-              span.icon-text
-                i.icon.ion-ios-star
-            p
-              | Ansicht
-          figcaption[itemprop="caption description"]
-            .photo-details
-              h4
-                | Mellan himmel och hav
-              h5
-                | Sweden
-              p
-                | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
-        figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
-          a.box-picture[href="img/gallery-4.jpg" itemprop="contentUrl" data-size="1920x1280"]
-            img.img-responsive[src="img/gallery-4.jpg" itemprop="thumbnail" alt="This is my work"]
-            span.widget-angle-top-right
-              span.icon-text
-                i.icon.ion-ios-star
-            p
-              | Vista
-          figcaption[itemprop="caption description"]
-            .photo-details
-              h4
-                | In the wilderness
-              h5
-                | United States
-              p
-                | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
-  #newsletter.newsletter-block
-    h2
-      | You like taking the lead of line?
-    p
-      | Being the first to know always feels great... Signing up to our newsletter gives you 
-      br
-      strong
-        | Exclusive access to our Grand Opening!
-    #subscribe
-      form#notifyMe[action="php/notify-me.php" method="POST"]
-        .form-group
-          .controls
-            input#mail-sub.form-control.email.srequiredField[type="text" name="email" placeholder="Click here to write your email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Click here to write your email'"]
-            i.fa.fa-spinner.opacity-0
-            button.btn.btn-lg.submit
-              | Notify Me
-            .clear
-      .block-message
-        .message
-          p.notify-valid
+            | B&B provides consultation & assist you to achive your ideas. We work in latest market trends as well in some old technologies. We suggest you the TECK stack according to you requirements not just to gain profit. We believe in customer satisfiaction & happiness and that will indirectly passed to us.
+  / .content
+  /   .photo-line
+  /     .my-gallery.row[itemscope itemtype="http://schema.org/ImageGallery"]
+  /       figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
+  /         a.box-picture[href="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280"]
+  /           img.img-responsive[src="img/gallery-1.jpg" itemprop="thumbnail" alt="This is my work"]
+  /           p
+  /             | Open
+  /         figcaption[itemprop="caption description"]
+  /           .photo-details
+  /             h4
+  /               | Merveilles cachées
+  /             h5
+  /               | France
+  /             p
+  /               | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
+  /       figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
+  /         a.box-picture[href="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280"]
+  /           img.img-responsive[src="img/gallery-2.jpg" itemprop="thumbnail" alt="This is my work"]
+  /           p
+  /             | Voir
+  /         figcaption[itemprop="caption description"]
+  /           .photo-details
+  /             h4
+  /               | Freund des Berges
+  /             h5
+  /               | Deutschland
+  /             p
+  /               | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
+  /       figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
+  /         a.box-picture[href="img/gallery-3.jpg" itemprop="contentUrl" data-size="1920x1280"]
+  /           img.img-responsive[src="img/gallery-3.jpg" itemprop="thumbnail" alt="This is my work"]
+  /           span.widget-angle-bottom-left
+  /             span.icon-text
+  /               i.icon.ion-ios-star
+  /           p
+  /             | Ansicht
+  /         figcaption[itemprop="caption description"]
+  /           .photo-details
+  /             h4
+  /               | Mellan himmel och hav
+  /             h5
+  /               | Sweden
+  /             p
+  /               | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
+  /       figure.col-xs-12.col-sm-6.col-lg-3[itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"]
+  /         a.box-picture[href="img/gallery-4.jpg" itemprop="contentUrl" data-size="1920x1280"]
+  /           img.img-responsive[src="img/gallery-4.jpg" itemprop="thumbnail" alt="This is my work"]
+  /           span.widget-angle-top-right
+  /             span.icon-text
+  /               i.icon.ion-ios-star
+  /           p
+  /             | Vista
+  /         figcaption[itemprop="caption description"]
+  /           .photo-details
+  /             h4
+  /               | In the wilderness
+  /             h5
+  /               | United States
+  /             p
+  /               | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
+  / #newsletter.newsletter-block
+  /   h2
+  /     | You like taking the lead of line?
+  /   p
+  /     | Being the first to know always feels great... Signing up to our newsletter gives you 
+  /     br
+  /     strong
+  /       | Exclusive access to our Grand Opening!
+  /   #subscribe
+  /     form#notifyMe[action="php/notify-me.php" method="POST"]
+  /       .form-group
+  /         .controls
+  /           input#mail-sub.form-control.email.srequiredField[type="text" name="email" placeholder="Click here to write your email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Click here to write your email'"]
+  /           i.fa.fa-spinner.opacity-0
+  /           button.btn.btn-lg.submit
+  /             | Notify Me
+  /           .clear
+  /     .block-message
+  /       .message
+  /         p.notify-valid
   .content.bottom-part
     .row
       .col-xs-12.col-sm-6.col-lg-6.contact-box
         h4
-          | © The Concept
+          | © B&B IT Services
         p
-          | See how enterprises, agencies, startups, and freelancers power their projects.
-          br
           |  If you have any further suggestions, questions or comments, here are the best ways to connect with us!
           br
           strong
-            | We can't wait to see you here!
+            | We can't wait to hear from you!
       .col-xs-12.col-sm-6.col-lg-6.contact-box
         h4
           | Get in touch with us!
         p
-          i.icon.ion-ios-telephone
-          strong
-            | Phone :
-          |  (+33) 66-1254-611 
-          br
+          / i.icon.ion-ios-telephone
+          / strong
+          /   | Phone :
+          / |  (+91) 90-4175-7415 
+          / br
           i.icon.ion-ios-email
           strong
             | Email :
-          a.phone-mail-link[href="mailto:your-email@example.com"]
-            | opal@example.com
+          a.phone-mail-link[href="mailto:info@bnbitservices.com"]
+            | info@bnbitservices.com
           br
           i.icon.ion-ios-location
           strong
             | Location :
-          |  66 Grand Central, NY 66564, USA 
+          |  F5-F6, Phase 8 Industrial Area, Mohali 160071, Punjab, India 
 footer
   .social-icons
     a[href="#"]
@@ -167,7 +165,7 @@ footer
     a[href="#"]
       i.fa.fa-linkedin
   p.copyright
-    |  © BnB IT Services - Achieve what you think
+    |  © B&B IT Services - Achieve your ideas
 .pswp[tabindex="-1" role="dialog" aria-hidden="true"]
   .pswp__bg
   .pswp__scroll-wrap
