chore: replace all references old company name with new one

--- a/app/views/home/coming_soon.html.slim
+++ b/app/views/home/coming_soon.html.slim
@@ -10,9 +10,9 @@ section#home.parallax-div
     h1.text-intro.opacity-0
       | Hey Guys!
       br
-      | We're Coming Soon...
+      | Website is Coming Soon...
     p.text-intro.opacity-0
-      | B&B IT Services is all about focusing towards customer needs and giving best IT services in market. Achieve your Vision & Ideas with us!
+      | SquadMinds is all about focusing towards customer needs and giving best IT services in the market. Achieve your Vision & Ideas with us!
       br
       strong
         | 24/7 Support.
@@ -32,10 +32,10 @@ section#info-part
           span.icon.icon-clock
             i.icon.ion-ios-clock-outline
           h3
-            | Services starting in : 
+            | Website coming in : 
             #getting-started
           p.mb-mobile-30
-            | B&B provides services for both web & mobile applications. B&B covers domains like Healthcare, E-Commerce & Business Automation. We are expert in technologies like Ruby on Rails(ROR), Django (Python), Laravel, CakePHP, Shopify Apps and MEAN & MERN Stacks
+            | SquadMinds provides services for both web & mobile applications. SquadMinds covers domains like Healthcare, E-Commerce & Business Automation. We are experts in technologies like Ruby on Rails(ROR), Django (Python), Laravel, CakePHP, Shopify Apps and MEAN & MERN Stacks.
       .col-xs-12.col-sm-6.col-lg-6.box-info
         .box-info-dark.equalizer
           span.icon
@@ -43,7 +43,7 @@ section#info-part
           h3.text-uppercase.color-grey
             | Bring your ideas to life
           p.mb-mobile-30
-            | B&B provides consultation & assist you to achive your ideas. We work in latest market trends as well in some old technologies. We suggest you the TECK stack according to you requirements not just to gain profit. We believe in customer satisfiaction & happiness and that will indirectly passed to us.
+            | SquadMinds provides consultation & assist you to achieve your vision. We work in latest market trends as well in some old technologies. We suggest you the TECH stack according to you requirements not just to gain profit. We believe in customer satisfaction & happiness and that will indirectly passed to us.
   / .content
   /   .photo-line
   /     .my-gallery.row[itemscope itemtype="http://schema.org/ImageGallery"]
@@ -129,7 +129,7 @@ section#info-part
     .row
       .col-xs-12.col-sm-6.col-lg-6.contact-box
         h4
-          | © B&B IT Services
+          | © SquadMinds
         p
           |  If you have any further suggestions, questions or comments, here are the best ways to connect with us!
           br
@@ -146,14 +146,14 @@ section#info-part
           / br
           i.icon.ion-ios-email
           strong
-            | Email :
-          a.phone-mail-link[href="mailto:info@bnbitservices.com"]
-            | info@bnbitservices.com
+            |  Email: 
+          a.phone-mail-link[href="mailto:info@squadmindsinc.com"]
+            | info@squadmindsinc.com
           br
           i.icon.ion-ios-location
           strong
-            | Location :
-          |  F5-F6, Phase 8 Industrial Area, Mohali 160071, Punjab, India 
+            |  Location: 
+          |  C-205, 6TH FLOOR, SM HEIGHTS, PHASE 8B INDUSTRIAL AREA, MOHALI, PUNJAB.
 footer
   .social-icons
     a[href="#"]
@@ -165,7 +165,7 @@ footer
     a[href="#"]
       i.fa.fa-linkedin
   p.copyright
-    |  © B&B IT Services - Achieve your ideas
+    |  © SquadMinds - Achieve your ideas
 .pswp[tabindex="-1" role="dialog" aria-hidden="true"]
   .pswp__bg
   .pswp__scroll-wrap
@@ -195,7 +195,7 @@ footer
 - content_for :extra_page_js do
   javascript:
     $("#getting-started")
-			.countdown("2019/05/15 00:00:00", function(event) {
+			.countdown("2019/07/30 00:00:00", function(event) {
 				$(this).html(
 					event.strftime('<strong>%D Days</strong> %Hh %Mm %Ss')
 				);
