--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,10 +2,10 @@ doctype html
 html.no-js[lang="en-us"]
   head
     title
-      | B&B IT Services
+      | SquadMinds
     meta[charset="utf-8"]
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
-    meta[name="author" content="B&B IT Services"]
+    meta[name="author" content="SquadMinds"]
     link[rel="shortcut icon" href="/favicon.png"]
     link[rel="apple-touch-icon" sizes="144x144" href="/favicon-retina-ipad.png"]
     link[rel="apple-touch-icon" sizes="114x114" href="/favicon-retina-iphone.png"]
