--- a/app/assets/stylesheets/coming_soon/coming_soon.scss
+++ b/app/assets/stylesheets/coming_soon/coming_soon.scss
@@ -71,7 +71,7 @@ table {
     text-align: center;
     margin: 0 auto;
     &:after {
-      content: "B&B IT Services";
+      content: "SquadMinds";
       /* Text under the circles */
       position: absolute;
       text-transform: uppercase;
