Add links for fb and linkedin, add favicon image

--- a/app/views/home/coming_soon.html.slim
+++ b/app/views/home/coming_soon.html.slim
@@ -156,13 +156,9 @@ section#info-part
           |  C-205, 6TH FLOOR, SM HEIGHTS, PHASE 8B INDUSTRIAL AREA, MOHALI, PUNJAB.
 footer
   .social-icons
-    a[href="#"]
+    a[href="https://www.facebook.com/squadminds/" target="_blank" rel="nofollow"]
       i.fa.fa-facebook
-    a[href="#"]
-      i.fa.fa-twitter
-    a[href="#"]
-      i.fa.fa-google-plus
-    a[href="#"]
+    a[href="https://www.linkedin.com/company/squadminds" target="_blank" rel="nofollow"]
       i.fa.fa-linkedin
   p.copyright
     |  © SquadMinds - Achieve your ideas
@@ -195,7 +191,7 @@ footer
 - content_for :extra_page_js do
   javascript:
     $("#getting-started")
-			.countdown("2019/07/30 00:00:00", function(event) {
+			.countdown("2019/11/18 00:00:00", function(event) {
 				$(this).html(
 					event.strftime('<strong>%D Days</strong> %Hh %Mm %Ss')
 				);
